--- a/index_malla_completa_interactiva.html
+++ b/index_malla_completa_interactiva.html
@@ -1,139 +1,259 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <title>Malla Curricular Interactiva - Beatriz</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Malla Curricular Fonoaudiología</title>
   <style>
     body {
-      font-family: 'Montserrat', sans-serif;
-      padding: 20px;
-      background-color: #f4f4f4;
+      font-family: 'Segoe UI', sans-serif;
+      background: #fef6ff;
+      margin: 0;
+      padding: 2rem;
     }
     h1 {
       text-align: center;
-      color: #00796B;
+      color: #a64ca6;
+      margin-bottom: 2rem;
     }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      background-color: white;
-      margin-top: 20px;
+    .semestre {
+      background: #f7e6ff;
+      padding: 1rem;
+      border-radius: 1rem;
+      margin-bottom: 2rem;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     }
-    th, td {
-      border: 1px solid #ccc;
-      padding: 10px;
-      vertical-align: top;
-      text-align: left;
-    }
-    th {
-      background-color: #00796B;
-      color: white;
+    .semestre h2 {
+      color: #6a1b9a;
+      border-bottom: 2px solid #ce93d8;
+      margin-bottom: 1rem;
     }
     .materia {
-      font-weight: bold;
-      margin: 10px 0 3px;
+      background: linear-gradient(135deg, #e1bee7, #f8bbd0);
+      margin: 0.5rem 0;
+      padding: 0.75rem 1rem;
+      border-radius: 0.8rem;
       cursor: pointer;
-      color: #007BFF;
+      transition: all 0.2s ease-in-out;
+      position: relative;
     }
-    .info {
-      padding: 10px;
-      border-radius: 5px;
-      margin-bottom: 10px;
-      background-color: #e9e9e9;
+    .materia:hover {
+      transform: scale(1.02);
     }
-    .aprobada {
+    .materia.aprobada {
       text-decoration: line-through;
-      background-color: #d0f0d0 !important;
+      background: #b3e5fc;
+      color: #333;
+      opacity: 0.6;
     }
-    .reprobada {
-      background-color: #f8d0d0 !important;
+    .materia.bloqueada {
+      background: #f0f0f0;
+      color: #aaa;
+      text-decoration: line-through;
+      cursor: not-allowed;
     }
-    .bloqueada {
-      background-color: #eee !important;
-      color: #888;
+    .tooltip {
+      visibility: hidden;
+      background-color: #616161;
+      color: #fff;
+      text-align: center;
+      padding: 5px;
+      border-radius: 6px;
+      position: absolute;
+      z-index: 1;
+      bottom: 125%;
+      left: 50%;
+      transform: translateX(-50%);
+      opacity: 0;
+      transition: opacity 0.3s;
+      font-size: 0.75rem;
     }
-    .biomedica { background-color: #d0f0d0; }
-    .clinica { background-color: #d0e8f9; }
-    .linguistica { background-color: #ffe0b3; }
-    .psicosocial { background-color: #f0d0f0; }
-    .investigacion { background-color: #e6e6e6; }
-    .practica { background-color: #fffacb; }
-    label {
-      display: inline-block;
-      margin-bottom: 5px;
+    .materia:hover .tooltip {
+      visibility: visible;
+      opacity: 1;
+    }
+    .contador {
+      font-weight: bold;
+      margin-top: 1rem;
+      color: #7b1fa2;
     }
   </style>
 </head>
 <body>
-  <h1>Malla Curricular Interactiva - Fonoaudiología</h1>
-  <p style="text-align:center;">Marca las materias como <strong>Aprobadas</strong> o <strong>Reprobadas</strong>. El sistema te mostrará qué puedes cursar luego.</p>
-
-  <table>
-    <tr>
-      <th>Semestre</th>
-      <th>Materias</th>
-    </tr>
-
-    <!-- Ejemplo con 1 materia. El resto se completará en siguientes versiones -->
-    <tr>
-      <td>1°</td>
-      <td>
-        <div class="info biomedica" id="anatomia">
-          <label>
-            <input type="checkbox" onchange="actualizarEstado(this, 'anatomia')">
-            Anatomía y Fisiología General (12 créditos)
-          </label><br>
-          Área: Biomédica<br>
-          Prerrequisitos: —<br>
-          Correquisitos: —
-        </div>
-        <div class="info linguistica" id="lenguaje">
-          <label>
-            <input type="checkbox" onchange="actualizarEstado(this, 'lenguaje')">
-            Lenguaje y Comunicología (6 créditos)
-          </label><br>
-          Área: Lingüística<br>
-          Prerrequisitos: —<br>
-          Correquisitos: —
-        </div>
-      </td>
-    </tr>
-
-  </table>
+  <h1>Malla Curricular Fonoaudiología</h1>
+  <div id="contenedor"></div>
 
   <script>
-    // Guardar y actualizar estado en localStorage
-    function actualizarEstado(checkbox, id) {
-      const div = document.getElementById(id);
-      if (checkbox.checked) {
-        div.classList.remove("reprobada");
-        div.classList.add("aprobada");
-        localStorage.setItem(id, "aprobada");
-      } else {
-        div.classList.remove("aprobada");
-        div.classList.add("reprobada");
-        localStorage.setItem(id, "reprobada");
+    const materias = [
+      { codigo: 'ing_b1', nombre: 'Suficiencia en Inglés B1 (Requisito)', semestre: 0 },
+      // Semestre 1
+      { codigo: 's1_m1', nombre: 'Fundamentos Fonoaudiológicos', semestre: 1 },
+      { codigo: 's1_m2', nombre: 'Anatomía y Fisiología General', semestre: 1 },
+      { codigo: 's1_m3', nombre: 'Psicología del Desarrollo', semestre: 1 },
+      { codigo: 's1_m4', nombre: 'Contexto Social y Salud Colectiva', semestre: 1 },
+      { codigo: 's1_m5', nombre: 'Lenguaje y Comunicología', semestre: 1 },
+      { codigo: 's1_m6', nombre: 'Biogénica', semestre: 1 },
+
+      // Semestre 2
+      { codigo: 's2_m1', nombre: 'Anatomía de Cabeza, Cuello y Tórax', semestre: 2, prerequisitos: ['s1_m2'] },
+      { codigo: 's2_m2', nombre: 'Psicopatología', semestre: 2, prerequisitos: ['s1_m3'] },
+      { codigo: 's2_m3', nombre: 'Física de la Audición', semestre: 2, prerequisitos: ['s1_m2'] },
+      { codigo: 's2_m4', nombre: 'Herramientas de la Investigación', semestre: 2 },
+      { codigo: 's2_m5', nombre: 'Fonética y Fonología Española', semestre: 2, correquisitos: ['s2_m7'] },
+      { codigo: 's2_m6', nombre: 'Crecimiento y Desarrollo', semestre: 2, prerequisitos: ['s1_m2'], correquisitos: ['s2_m7'] },
+      { codigo: 's2_m7', nombre: 'Lenguaje y Cognición', semestre: 2, prerequisitos: ['s1_m5'], correquisitos: ['s2_m5', 's2_m6'] },
+
+      // Semestre 3
+      { codigo: 's3_m1', nombre: 'Alto Riesgo Infantil', semestre: 3, prerequisitos: ['s2_m6'], correquisitos: ['s3_m6'] },
+      { codigo: 's3_m2', nombre: 'Psicomotricidad', semestre: 3, prerequisitos: ['s2_m6'], correquisitos: ['s3_m4'] },
+      { codigo: 's3_m3', nombre: 'Diagnóstico Fonoaudiológico y Programación Terapéutica', semestre: 3, prerequisitos: ['s2_m7', 's2_m6'] },
+      { codigo: 's3_m4', nombre: 'Técnica de Análisis y Modificación de la Conducta', semestre: 3, prerequisitos: ['s2_m6'], correquisitos: ['s3_m2'] },
+      { codigo: 's3_m5', nombre: 'Otología', semestre: 3, prerequisitos: ['s2_m1', 's2_m3'] },
+      { codigo: 's3_m6', nombre: 'Anatomía y Fisiología Neurológica', semestre: 3, prerequisitos: ['s2_m1'], correquisitos: ['s3_m1'] },
+      { codigo: 's3_m7', nombre: 'Bioestadística', semestre: 3, prerequisitos: ['s2_m4'] },
+
+      // Semestre 4
+      { codigo: 's4_m1', nombre: 'Práctica. Evaluación Fonoaudiológica Infantil', semestre: 4, prerequisitos: ['s3_m3'], correquisitos: ['s4_m2', 's4_m3'] },
+      { codigo: 's4_m2', nombre: 'Neurología Infantil y del Adulto', semestre: 4, prerequisitos: ['s3_m6'], correquisitos: ['s4_m1'] },
+      { codigo: 's4_m3', nombre: 'Patologías del Habla, Deglución y Rehabilitación', semestre: 4, prerequisitos: ['s3_m3', 's3_m6'], correquisitos: ['s4_m1'] },
+      { codigo: 's4_m4', nombre: 'Audiología y Laberinología', semestre: 4, prerequisitos: ['s3_m1', 's3_m5'] },
+      { codigo: 's4_m5', nombre: 'Odontoestomatología', semestre: 4 },
+      { codigo: 's4_m6', nombre: 'Terapéutica Fonoaudiológica en Trastornos Cognitivos y Sensoriales', semestre: 4, prerequisitos: ['s3_m1'] },
+      { codigo: 's4_m7', nombre: 'Salud Pública I', semestre: 4, prerequisitos: ['s3_m7'] },
+
+      // Semestre 5
+      { codigo: 's5_m1', nombre: 'Intervención Fonoaudiológica I', semestre: 5, prerequisitos: ['s4_m1'], correquisitos: ['s5_m2', 's5_m3', 's5_m5'] },
+      { codigo: 's5_m2', nombre: 'Patologías del Lenguaje y su Rehabilitación', semestre: 5, prerequisitos: ['s4_m2', 's4_m3'], correquisitos: ['s5_m1'] },
+      { codigo: 's5_m3', nombre: 'Audiología y Laberinología Patológica', semestre: 5, prerequisitos: ['s4_m4', 's4_m2'], correquisitos: ['s5_m1'] },
+      { codigo: 's5_m4', nombre: 'Terapéutica en Trastornos Neuromotores', semestre: 5, prerequisitos: ['s4_m6', 's4_m2'] },
+      { codigo: 's5_m5', nombre: 'Evaluación y Diagnóstico de la Voz', semestre: 5, prerequisitos: ['s4_m2', 's4_m3'], correquisitos: ['s5_m1'] },
+      { codigo: 's5_m6', nombre: 'Geriatría y Gerontología', semestre: 5, prerequisitos: ['s4_m2'] },
+      { codigo: 's5_m7', nombre: 'Salud Pública II', semestre: 5, prerequisitos: ['s4_m7'] },
+
+      // Semestre 6
+      { codigo: 's6_m1', nombre: 'Relación Clínica y Terapéutica I', semestre: 6, prerequisitos: ['s5_m1'], correquisitos: ['s6_m4'] },
+      { codigo: 's6_m2', nombre: 'Terapéutica en Malformaciones Orofaciales', semestre: 6, prerequisitos: ['s5_m5'] },
+      { codigo: 's6_m3', nombre: 'Metodología de la Investigación I', semestre: 6, prerequisitos: ['s5_m7'] },
+      { codigo: 's6_m4', nombre: 'Intervención Fonoaudiológica II', semestre: 6, prerequisitos: ['s5_m1'], correquisitos: ['s6_m1', 's6_m5', 's6_m6'] },
+      { codigo: 's6_m5', nombre: 'Terapia y Rehabilitación de la Voz', semestre: 6, prerequisitos: ['s5_m5'], correquisitos: ['s6_m4'] },
+      { codigo: 's6_m6', nombre: 'Audioprótesis e Intervención Auditiva', semestre: 6, prerequisitos: ['s5_m3'], correquisitos: ['s6_m4'] },
+
+      // Semestre 7
+      { codigo: 's7_m1', nombre: 'Administración Fonoaudiológica', semestre: 7 },
+      { codigo: 's7_m2', nombre: 'Intervención Fonoaudiológica III', semestre: 7, prerequisitos: ['s6_m4'], correquisitos: ['s7_m3', 's7_m7'] },
+      { codigo: 's7_m3', nombre: 'Análisis Acústico de la Voz', semestre: 7, prerequisitos: ['s6_m5'], correquisitos: ['s7_m2'] },
+      { codigo: 's7_m4', nombre: 'Metodología de la Investigación II', semestre: 7, prerequisitos: ['s6_m3'] },
+      { codigo: 's7_m5', nombre: 'Técnicas Didácticas en Fonoaudiología', semestre: 7 },
+      { codigo: 's7_m6', nombre: 'Trastornos del Aprendizaje', semestre: 7, prerequisitos: ['s6_m4'] },
+      { codigo: 's7_m7', nombre: 'Relación Clínica y Terapéutica II', semestre: 7, prerequisitos: ['s6_m1'], correquisitos: ['s7_m2'] },
+
+      // Semestre 8
+      { codigo: 's8_m1', nombre: 'Diagnóstico e Intervención Fonoaudiológica Integral', semestre: 8, prerequisitos: ['s7_m2', 's7_m7'], correquisitos: ['s8_m2'] },
+      { codigo: 's8_m2', nombre: 'Ejecución Terapéutica Fonoaudiológica', semestre: 8, prerequisitos: ['s7_m2', 's7_m7'], correquisitos: ['s8_m1'] },
+      { codigo: 's8_m3', nombre: 'Integración de Proyecto I', semestre: 8, prerequisitos: ['s7_m4'] },
+
+      // Semestre 9
+      { codigo: 's9_m1', nombre: 'Promoción y Prevención Fonoaudiológica', semestre: 9, prerequisitos: ['s8_m1'] },
+      { codigo: 's9_m2', nombre: 'Prácticas en Centros de Salud II', semestre: 9, prerequisitos: ['s8_m2'] },
+      { codigo: 's9_m3', nombre: 'Integración de Proyecto II', semestre: 9, prerequisitos: ['s8_m3'] }
+    ];
+
+    const estado = JSON.parse(localStorage.getItem('estadoMaterias') || '{}');
+
+    function crearHTML() {
+      const contenedor = document.getElementById('contenedor');
+      contenedor.innerHTML = '';
+      const maxSemestre = Math.max(...materias.map(m => m.semestre));
+      for (let i = 0; i <= maxSemestre; i++) {
+        const semestre = document.createElement('div');
+        semestre.className = 'semestre';
+        const titulo = document.createElement('h2');
+        titulo.textContent = `Semestre ${i}`;
+        semestre.appendChild(titulo);
+
+        const materiasSemestre = materias
+          .filter(m => m.semestre === i)
+          .sort((a, b) => {
+            const puedeA = puedeTomar(a);
+            const puedeB = puedeTomar(b);
+            if (puedeA === puedeB) return 0;
+            return puedeA ? -1 : 1;
+          });
+
+        let contador = 0;
+
+        materiasSemestre.forEach(m => {
+          const div = document.createElement('div');
+          div.className = 'materia';
+          div.textContent = m.nombre;
+          div.dataset.codigo = m.codigo;
+
+          const tooltip = document.createElement('div');
+          tooltip.className = 'tooltip';
+          tooltip.innerHTML = generarTooltip(m);
+          div.appendChild(tooltip);
+
+          if (estado[m.codigo]) {
+            div.classList.add('aprobada');
+            contador++;
+          } else if (!puedeTomar(m)) {
+            div.classList.add('bloqueada');
+          }
+
+          semestre.appendChild(div);
+        });
+
+        const contadorDiv = document.createElement('div');
+        contadorDiv.className = 'contador';
+        contadorDiv.textContent = `${contador} materia(s) aprobada(s).`;
+        semestre.appendChild(contadorDiv);
+
+        contenedor.appendChild(semestre);
       }
     }
 
-    // Al cargar, restaurar los estados guardados
-    window.onload = function() {
-      const ids = ["anatomia", "lenguaje"];
-      ids.forEach(id => {
-        const estado = localStorage.getItem(id);
-        const div = document.getElementById(id);
-        const checkbox = div.querySelector("input[type='checkbox']");
-        if (estado === "aprobada") {
-          div.classList.add("aprobada");
-          checkbox.checked = true;
-        } else if (estado === "reprobada") {
-          div.classList.add("reprobada");
-          checkbox.checked = false;
-        }
-      });
+    function puedeTomar(materia) {
+      const preOk = !materia.prerequisitos || materia.prerequisitos.every(c => estado[c]);
+      const coOk = !materia.correquisitos || materia.correquisitos.every(c => estado[c]);
+      const es9noSemestre = materia.semestre === 9;
+      if (es9noSemestre && !estado['ing_b1']) return false;
+      return preOk && coOk;
     }
+
+    function generarTooltip(materia) {
+      const prereqNombres = materia.prerequisitos?.map(cod => {
+        const m = materias.find(x => x.codigo === cod);
+        return m ? m.nombre : cod;
+      }) || [];
+      const correqNombres = materia.correquisitos?.map(cod => {
+        const m = materias.find(x => x.codigo === cod);
+        return m ? m.nombre : cod;
+      }) || [];
+
+      const prereq = prereqNombres.length ? `📌 Pre: ${prereqNombres.join(', ')}` : '';
+      const coreq = correqNombres.length ? `🤝 Co: ${correqNombres.join(', ')}` : '';
+      return [prereq, coreq].filter(Boolean).join('<br>');
+    }
+
+    function toggleAprobada(div) {
+      const codigo = div.dataset.codigo;
+      if (div.classList.contains('bloqueada')) return;
+      if (estado[codigo]) {
+        delete estado[codigo];
+      } else {
+        estado[codigo] = true;
+      }
+      localStorage.setItem('estadoMaterias', JSON.stringify(estado));
+      crearHTML();
+    }
+
+    document.addEventListener('click', e => {
+      if (e.target.classList.contains('materia')) {
+        toggleAprobada(e.target);
+      }
+    });
+
+    crearHTML();
   </script>
 </body>
 </html>
